--- a/index.html
+++ b/index.html
@@ -89,10 +89,38 @@
     </div>
   </section>
 
+  <section class="flex justify-center items-center py-10 hidden">
+    <span class="loading loading-bars loading-xs"></span>
+    <span class="loading loading-bars loading-sm"></span>
+    <span class="loading loading-bars loading-md"></span>
+    <span class="loading loading-bars loading-lg"></span>
+    <span class="loading loading-bars loading-xl"></span>
+  </section>
+
   <!-- lesson word -->
   <section id="word-container" class="bg-gray-200 w-11/12 mx-auto p-10 my-10 grid grid-cols-3 gap-5">
     
+    <div class="text-center font-bangla col-span-full space-y-4 py-10">
+      <p class="text-gray-500 text-xl">আপনি এখনো কোন Lesson Select করেন নি</p>
+      <h2 class="font-semibold text-4xl">একটি Lesson Select করুন।</h2>
+    </div>
   </section>
+
+  
+
+  <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <div id="details-container" class="space-y-4"></div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 
 
   <script src="./script/index.js"></script>
