--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <!-- navbar -->
   <header class="">
-    <div class="navbar bg-gray-100 shadow-sm">
-    <div class="navbar-start ">
+    <div class="navbar bg-gray-100 shadow-sm ">
+    <div class="navbar-start md:ml-15">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
@@ -48,7 +48,7 @@
         <span class="font-bangla font-semibold text-lg">জানালা</span>
       </a>
     </div>
-    <div class="navbar-end hidden lg:flex">
+    <div class="navbar-end hidden lg:flex md:mr-15">
       <ul class="menu menu-horizontal px-1 gap-3">
         <li>
           <a href="" class="btn btn-outline btn-primary"><i class="fa-solid fa-circle-question"></i>FAQ</a>
@@ -62,7 +62,7 @@
       </ul>
     </div>
 
-  </div>
+    </div>
   </header>
 
   <!-- banner -->
@@ -106,21 +106,96 @@
     </div>
   </section>
 
-  
-
   <!-- Open the modal using ID.showModal() method -->
-<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
-<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-  <div class="modal-box">
-    <div id="details-container" class="space-y-4"></div>
-    <div class="modal-action">
-      <form method="dialog">
-        <!-- if there is a button in form, it will close the modal -->
-        <button class="btn">Close</button>
-      </form>
+  <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+  <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+    <div class="modal-box">
+      <div id="details-container" class="space-y-4"></div>
+      <div class="modal-action">
+        <form method="dialog">
+          <!-- if there is a button in form, it will close the modal -->
+          <button class="btn">Close</button>
+        </form>
+      </div>
+    </div>
+  </dialog>
+
+  <!-- FAQ section -->
+  <div class="w-11/12 mx-auto bg-white my-20">
+    <h2 class="text-3xl font-bold text-center mb-8">
+      <span class="text-sky-400">Frequently</span> Asked Questions
+    </h2>
+
+    <div class="space-y-4">
+      
+      <div class="collapse collapse-plus bg-gray-200 ">
+        <input type="radio" name="my-accordion-3" checked="checked" /> 
+        <div class="collapse-title text-sm font-semibold">
+          1. How can I start learning English on this website?
+        </div>
+        <div class="collapse-content text-xs text-gray-500"> 
+          <p>You can start by exploring our beginner lessons, interactive exercises, and quizzes. We also offer structured courses to guide you step by step.</p>
+        </div>
+      </div>
+
+      <div class="collapse collapse-plus bg-gray-200 ">
+        <input type="radio" name="my-accordion-3" /> 
+        <div class="collapse-title text-sm font-semibold">
+          2. Is this website free to use?
+        </div>
+        <div class="collapse-content text-xs text-gray-500"> 
+          <p>Yes, our basic resources are completely free. We also have premium plans for advanced features.</p>
+        </div>
+      </div>
+
+      <div class="collapse collapse-plus bg-gray-200 ">
+        <input type="radio" name="my-accordion-3" /> 
+        <div class="collapse-title text-sm font-semibold">
+          3. Do I need to create an account?
+        </div>
+        <div class="collapse-content text-xs text-gray-500"> 
+          <p>Creating an account helps you track your progress, though it's not mandatory for basic lessons.</p>
+        </div>
+      </div>
+
+      <div class="collapse collapse-plus bg-gray-200 ">
+        <input type="radio" name="my-accordion-3" /> 
+        <div class="collapse-title text-sm font-semibold">
+          4. How can I build my English vocabulary?
+        </div>
+        <div class="collapse-content text-xs text-gray-500"> 
+          <p>You can use our daily word challenges and flashcards section.</p>
+        </div>
+      </div>
+
     </div>
   </div>
-</dialog>
+
+  <!-- Footer section -->
+  <footer class="footer sm:footer-horizontal bg-neutral text-neutral-content p-25 md:flex justify-between">
+    <aside>
+      <a href="" class="flex items-center gap-1">
+          <span class="text-2xl font-bold">English</span>
+          <img src="./picture/logo.png" alt="">
+          <span class="font-bangla font-semibold text-2xl">জানালা</span>
+      </a>
+      <p class="text-lg text-gray-400">
+        ইংরেজি শিখুন সহজে
+        <br />
+        Providing ED-Tech Applications since 2026
+      </p>
+    </aside>
+
+    <nav>
+      <h6 class="footer-title">Social</h6>
+      <div class="grid grid-flow-col gap-4">
+        <a href="https://www.facebook.com/mdabdul.azharsayed"><img src="./picture/fb-thumb.png" class="bg-sky-500 h-[35px] w-[35px] rounded-3xl"></a>
+        <a href="https://www.youtube.com/@ProgrammingHeroCommunity"><img src="./picture/youtube-thumb.png" class="bg-red-500 h-[35px] w-[35px] rounded-3xl"></a>
+        <a href="https://github.com/muhammadsayed123"><img src="./picture/github-thumb.png" class="bg-white h-[35px] w-[35px] rounded-3xl"></a>
+        
+      </div>
+    </nav>
+  </footer>
 
 
   <script src="./script/index.js"></script>
