--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </section>
 
   <!-- lesson word -->
-  <section id="word-container" class="bg-gray-200 w-11/12 mx-auto p-10 my-10 grid grid-cols-3 gap-5">
+  <section id="word-container" class="bg-gray-200 w-11/12 mx-auto p-10 my-10 grid sm:grid-cols-3 grid-cols-2 gap-5">
     
     <div class="text-center font-bangla col-span-full space-y-4 py-10">
       <p class="text-gray-500 text-xl">আপনি এখনো কোন Lesson Select করেন নি</p>
